hphp/hack/test/typecheck/case_type/where_clauses/simple_instantiability_check.php
<?hh

trait MyTrait {}
case type CT<T> = int where T = MyTrait;
